--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="es">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,6 +37,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contacto">Contacto</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="btn btn-primary" href="presupuesto.html">Presupuesto</a>
                 </li>
             </ul>
         </div>
